--- a/frontend/groupomania/public/index.html
+++ b/frontend/groupomania/public/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>Nous sommes désolés l'application ne fonctionne pas sans JavaScript activé. Merci de l'activer pour continuer.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
